@@ -46,6 +46,7 @@
     <div class="menu-container">
         <div class="submenu">
             <ul class="current">
+                <li><a href="group__Efreet__Utils.html">Utils</a></li>
                 <li><a href="group__Efreet__Uri.html">URI</a></li>
                 <li><a href="group__Efreet__Trash.html">Trash</a></li>
                 <li><a href="group__Efreet__Mime.html">Mime Types</a></li>
